# tagtree

./: .gitignore  CMakeLists.txt  IDEAS  LICENSE  README  README.md  TODO  tone-config-version.cmake.in  tone-config.cmake.in  tone.pc.in  trut-config-version.cmake.in  trut-config.cmake.in  trut.pc.in
cmake/: git-ver.cmake
include/tone/: tone.h
include/trut/: init.h  trut.h
src/: CMakeLists.txt  init.c  main.c
src/cli/: CMakeLists.txt  config.h.in  main.c
tests/: 00-init-empty.sh  00-init.sh  01-init.sh  02-some.sh  02-update-reveal.sh  03-update-hide.sh  common.sh  functions.sh  main.sh
tests/root/: file-00  file-01  file-02  file-03  file-04
tests/root/tag-00/subtag-00-00/: file-00  file-01  file-02  file-03
tests/root/tag-00/subtag-00-01/: file-00  file-01  file-02
tests/root/tag-00/subtag-00-02/: file-00  file-01  file-02  file-03
tests/root/tag-01/subtag-01-00/: file-00  file-01  file-02
tests/root/tag-01/subtag-01-01/: file-00  file-01  file-02  file-03  file-04
tests/root/tag-02/: file-00  file-01  file-02  file-03  file-04
tests/root/tag-03/subtag-03-00/: file-00  file-01  file-02
tests/root/tag-03/subtag-03-01/: file-00
tests/root/tag-03/subtag-03-02/: file-00  file-01  file-02  file-03  file-04  file-05
tests/root/tag-03/subtag-03-03/: file-00  file-01
