set (SOURCES
  init.c)

### Build library
add_library (${PROJECT} SHARED ${SOURCES} ${HEADERS})
set_target_properties(${PROJECT} PROPERTIES OUTPUT_NAME ${PROJECT}) 
set_target_properties (${PROJECT}
  PROPERTIES
  VERSION "${TRUT_VERSION}" SOVERSION "${TRUT_VERSION_MAJOR}"
  LIBRARY_OUTPUT_DIRECTORY ${BUILD_DIR})
